Add chart libray with iconset and action bar action

--- a/res/menu/steel_drawing.xml
+++ b/res/menu/steel_drawing.xml
@@ -1,9 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
+        android:title="@string/action_settings"/>
+    
+    <item
+        android:id="@+id/action_email"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_email"
+        />
+    
+    <item
+        android:id="@+id/action_charts"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_chart"
         android:title="@string/action_settings"/>
 
 </menu>
