--- a/res/layout-large/steel_drawing.xml
+++ b/res/layout-large/steel_drawing.xml
@@ -15,106 +15,9 @@
         android:layout_weight="0.6"
         android:orientation="vertical"
         android:useDefaultMargins="true" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:background="@color/Red"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="@string/dieschedule"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <LinearLayout style="@style/form_layout" >
-
-            <TextView
-                style="@style/inputLabel"
-                android:text="@string/inlet" />
-
-            <EditText
-                android:id="@+id/txtinlet"
-                style="@style/inputNumbers"
-                android:inputType="numberDecimal"
-                android:text="6.50" />
-
-            <TextView
-                style="@style/measure"
-                android:text="mm" />
-        </LinearLayout>
-
-        <LinearLayout style="@style/form_layout" >
-
-            <TextView
-                style="@style/inputLabel"
-                android:text="@string/outlet" />
-
-            <EditText
-                android:id="@+id/txtoutlet"
-                style="@style/inputNumbers"
-                android:inputType="numberDecimal"
-                android:text="2.0" />
-
-            <TextView
-                style="@style/measure"
-                android:text="mm" />
-        </LinearLayout>
-
-        <LinearLayout style="@style/form_layout" >
-
-            <TextView
-                style="@style/inputLabel"
-                android:text="@string/n_of_dies" />
-
-            <Spinner
-                android:id="@+id/n_of_dies"
-                style="@style/inputNumbers" />
-
-            <TextView
-                style="@style/measure"
-                android:text="N°" />
-        </LinearLayout>
-
-        <LinearLayout style="@style/form_layout" >
-
-            <TextView
-                style="@style/inputLabel"
-                android:text="@string/carbon_content" />
-
-            <Spinner
-                android:id="@+id/carbon_content"
-                style="@style/inputNumbers" />
-
-            <TextView
-                style="@style/measure"
-                android:text="#" />
-        </LinearLayout>
-
-        <LinearLayout style="@style/form_layout" >
-
-            <TextView
-                style="@style/inputLabel"
-                android:text="@string/target_speed" />
-
-            <EditText
-                android:id="@+id/txttargetspeed"
-                style="@style/inputNumbers"
-                android:inputType="numberDecimal"
-                android:text="10" />
-
-            <TextView
-                style="@style/measure"
-                android:text="m/s" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/btnSubmit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="5"
-            android:text="@string/confirm" />
+    
+        <include layout="@layout/steel_drawing"/>
+       
     </LinearLayout>
 
 </LinearLayout>
