--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -28,7 +28,7 @@
          <item name="android:orientation">horizontal</item>
     </style>
     
-    <style name="inputLabel"  parent="@android:style/TextAppearance.Medium">
+    <style name="inputLabel"  parent="@android:style/TextAppearance.Small">
         <item name="android:background">@color/Grey1</item>
         <item name="android:gravity">right|center_vertical</item>
         <item name="android:layout_weight">1</item>
@@ -48,7 +48,7 @@
          <item name="android:padding">5dp</item>
     </style>
     
-     <style name="measure" parent="@android:style/TextAppearance.Medium">
+     <style name="measure" parent="@android:style/TextAppearance.Small">
          <item name="android:gravity">left|center_vertical</item>
          <item name="android:layout_weight">1</item>
         <item name="android:layout_width">match_parent</item>
